--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -57,9 +57,9 @@ Hay una gran cantidad de herramientas para el control de versiones en la tienda 
 \subsection{Opción elegida}
 
 \subsubsection{Zenhub}\label{zenhub}
-~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github, pág.~\pageref{github}, lo que me llevó a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban} donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor encajaba en la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión se lleva. No me gustó que las tareas las cierre por días en vez de por horas.
+~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github, pág.~\pageref{github}, lo que me llevó a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban}, ver figura~\ref{fig:zenhub}, donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor encajaba en la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión se lleva. No me gustó que las tareas las cierre por días en vez de por horas.
 
-\begin{figure}[h]
+\begin{figure}%[h]
 	\centering
 	\includegraphics[width=1\textwidth]{teoria/kanban.png}
 	\caption{Herramienta Zenhub Kanban}\label{fig:zenhub}
@@ -178,9 +178,9 @@ Es un navegador web de código cerrado desarrollado por Google, siendo gratuito.
 Marco de trabajo para el desarrollo ágil de software, implementando una estrategia iterativa incremental, con revisiones y reuniones con los tutores de proyecto cada 5 días.
 
 \subsection{Desarrollo en cascada}
-Es un desarrollo en secuencia, es decir, una vez se pasa de etapa, no se puede volver atrás, se divide en pasos muy diferenciados, que se adapta muy bien con las metodologías ágiles. La secuencia de trabajo se puede ver en la siguiente figura\ref{fig:cascada}:
+Es un desarrollo en secuencia, es decir, una vez se pasa de etapa, no se puede volver atrás, se divide en pasos muy diferenciados, se ha usado para la creación de los juegos, ya que necesitan ser terminados una vez que se comienzan. La secuencia de trabajo se puede ver en la siguiente figura~\ref{fig:cascada}:
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{teoria/cascada.png}
 	\caption{Desarrollo en cascada}\label{fig:cascada}
@@ -191,7 +191,7 @@ Para mi la parte más importante de toda la gestión del proyecto, reuniones, di
 
 Siempre lo he tenido a mi lado como soporte, como se puede ver en la figura~\ref{fig:soporte}:
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=1 \textwidth]{teoria/soporte.jpeg}
 	\caption{Cuaderno}\label{fig:soporte}
