--- a/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
+++ b/docs/latex/tex/5_Aspectos_relevantes_del_desarrollo_del_proyecto.tex
@@ -68,7 +68,7 @@ También es fundamental tener la clave bien guardada porque en el caso de que se
 \section{AdMob}
 Otro de los problemas que se me presentaron fue cuando pretendía mostrar los anuncios en la aplicación, ya que solo me dejaba usar los anuncios de test que me proporciona Google Ad. He revisado cada uno de los Ids, como se puede ver en la figura~\ref{fig:idbanner}, pero no lo he conseguido.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=1\textwidth]{teoria/idbanner.png}
 	\caption{Banner}\label{fig:idbanner}
@@ -76,7 +76,7 @@ Otro de los problemas que se me presentaron fue cuando pretendía mostrar los an
 
 Y las métricas de usuario si que funcionan, ver figura~\ref{fig:metricas}, lo que indica que la instancia de adMob es la correcta.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.8\textwidth]{teoria/metricas.png}
 	\caption{Métricas usuarios}\label{fig:metricas}
@@ -84,7 +84,7 @@ Y las métricas de usuario si que funcionan, ver figura~\ref{fig:metricas}, lo q
 
 Tras investigar y realizar gran cantidad de pruebas creo que el problema puede estar en que no tengo métodos de cobro de ingresos. Por lo tanto la propia Google ni se molesta en poner anuncios. Pero es que la propia consola web de admob, no me deja introducir un método de pago, como se puede ver en la figura~\ref{fig:pagos}:
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=1\textwidth]{teoria/pagos.png}
 	\caption{Pagos adMob no van}\label{fig:pagos}
