--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -65,7 +65,7 @@ Las ventanas de las que consta la aplicación son las siguientes:
 \subsection{Log in}\label{login}
 Es la primera ventana que nos encontramos cuando lanzamos la aplicación. Es necesario que nos registremos siempre con la cuenta de \emph{Google} que tengamos disponible, ya que muchos de los servicios están en la nube, no está permitido el acceso mediante anonimato.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.7\textwidth]{manual/loginpage.jpg}
 	\caption{Log in page}\label{fig:loginpage}
@@ -73,13 +73,13 @@ Es la primera ventana que nos encontramos cuando lanzamos la aplicación. Es nec
 
 Cuando pulsamos en el botón de \emph{sign in with Google}, nos aparecerá la ventana siguiente (ver figura~\ref{fig:formlog}), dónde nos pedirá que ingresemos el usuario de nuestra cuenta de \emph{Google}. También se puede consultar la política de privacidad, como se puede ver en la figura~\ref{fig:policy}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.7\textwidth]{manual/loginform.jpg}
 	\caption{Formulario sign in}\label{fig:formlog}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/policy.jpg}
 	\caption{Política de privacidad}\label{fig:policy}
@@ -91,13 +91,13 @@ Una vez completemos este proceso, la ventana siguiente a la que nos redirige la 
 \subsection{Home}\label{home}
 Esta página, es donde se muestra el póster del proyecto, además de tener el acceso al menú lateral de la aplicación. Para acceder a este tenemos que deslizar lateralmente a la derecha, y para cerrarlo, tenemos que hacer el proceso inverso deslizando hacia la izquierda o pulsando fuera del menú, ver figura~\ref{fig:menuhome}. Otra de las formas de entrar a este es pulsando el menú hamburguesa.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/home.jpg}
 	\caption{Home}\label{fig:homepage}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/banner.jpg}
 	\caption{Banner}\label{fig:banner}
@@ -105,7 +105,7 @@ Esta página, es donde se muestra el póster del proyecto, además de tener el a
 
 Como podemos ver en la figura~\ref{fig:banner}, tenemos un \emph{banner} donde se nos muestra la publicidad, en el caso de que pinchemos en él, nos abrirá el navegador para mostrarnos más datos referentes al producto que se está anunciando. Es algo que aparecerá durante el resto de la aplicación dependiendo de la página en la que nos encontremos.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.8\textwidth]{manual/menuhome.jpg}
 	\caption{Menú lateral}\label{fig:menuhome}
@@ -123,13 +123,13 @@ Como se aprecia en el menú, ver figura~\ref{fig:menuhome},  se encuentra la sig
 
 En el caso de que se quiera salir de la sesión que tenemos abierta, se debe pulsar en nuestra figura~\ref{fig:mostrarlogout} y aparecerá un cuadro de alerta con las opciones disponibles, se pulsará en \emph{Sign out}, ver figura~\ref{fig:salir}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/mostrarlogout.jpg}
 	\caption{Mostrar sign out}\label{fig:mostrarlogout}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/salir.jpg}
 	\caption{Sign Out}\label{fig:salir}
@@ -138,7 +138,7 @@ En el caso de que se quiera salir de la sesión que tenemos abierta, se debe pul
 \subsection{Settings}\label{settings}
 Este apartado del menú, es para manejar las opciones referentes a la aplicación, como podemos ver en la figura~\ref{fig:settingspage}. Cada una de estas, es un \emph{slider} o deslizador, que si está activado, quiere decir que está a \emph{true} o verdadero.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.8\textwidth]{manual/settings.jpg}
 	\caption{Settings}\label{fig:settingspage}
@@ -148,7 +148,7 @@ Una descripción de lo que hacen cada uno de los ajustes:
 
 \begin{itemize}
 	\item \textbf{Dark mode:} cambia el color de la aplicación a modo oscuro, con el fin de ahorrar batería o para personas que tengan dificultades visuales, ver figura~\ref{fig:darkmode}.
-	\begin{figure}[H]
+	\begin{figure}%[H]
 		\centering
 		\includegraphics[width=0.8\textwidth]{manual/darkmode.jpg}
 		\caption{Dark Mode}\label{fig:darkmode}
@@ -162,7 +162,7 @@ Una descripción de lo que hacen cada uno de los ajustes:
 \subsection{About me}\label{about}
 Pretende mostrar la información referente al creador de la aplicación, como muestra el diseño, ver figura~\ref{fig:aboutpage}. Se aprecia un carrusel, con imágenes de los lenguajes de programación conocidos y debajo de dicho elementos, unos icono botones, que enlazan con las páginas de interés.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.7\textwidth]{manual/aboutpage.jpg}
 	\caption{About me}\label{fig:aboutpage}
@@ -180,7 +180,7 @@ Cada una de las opciones abrirá la aplicación correspondiente en el caso de qu
 
 En el caso de \emph{Gmail}, nos abre la vista~\ref{fig:mailto}, para mandar un correo al creador de la aplicación, con algún tipo de \emph{feedback}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.9\textwidth]{manual/mailto.jpg}
 	\caption{Mail to}\label{fig:mailto}
@@ -189,7 +189,7 @@ En el caso de \emph{Gmail}, nos abre la vista~\ref{fig:mailto}, para mandar un c
 \subsection{Menú de juegos}\label{menugames}
 En este apartado se muestra una lista con todos los juegos de la colección que están disponibles, la finalidad es que el usuario pueda decidir de una manera sencilla a qué quiere jugar. Por lo que es tan simple como pulsar en la opción correspondiente, ver figura~\ref{fig:gamespage}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/gamespage.jpg}
 	\caption{Games menú}\label{fig:gamespage}
@@ -212,7 +212,7 @@ Los controles de desplazamiento son:
 
 Cabe destacar que el menú no está disponible para las ventanas de los juegos, porque puede que se interfiera con la navegabilidad del sistema.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.9\textwidth]{manual/snake.jpg}
 	\caption{Snake game}\label{fig:snakepage}
@@ -226,7 +226,7 @@ El juego finaliza desplegando la ventana, ver figura~\ref{fig:gameover}, cuando 
 	\item Cabeza de la serpiente choque contra el cuerpo de la misma.
 \end{itemize}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.9\textwidth]{manual/gameover.jpg}
 	\caption{Snake game over}\label{fig:gameover}
@@ -239,7 +239,7 @@ Cuando se produce el \emph{game over}, ver figura~\ref{fig:gameover}, tenemos 3 
 	\item \textbf{Submit score:} si se da la situación de una mejora de puntuación, con respecto a anteriores partidas, para el jugador que se encuentra logueado, se enviará al formulario, figura~\ref{fig:rankform} de ingreso de datos.
 	En el caso de que no tengamos mejora, se puede ver el ranking, en la figura~\ref{fig:rankpage}.
 	
-	\begin{figure}[H]
+	\begin{figure}%[H]
 		\centering
 		\includegraphics[height=0.9\textwidth]{manual/rankform.jpg}
 		\caption{Formulario del ranking}\label{fig:rankform}
@@ -249,7 +249,7 @@ Cuando se produce el \emph{game over}, ver figura~\ref{fig:gameover}, tenemos 3 
 	
 	\item \textbf{Vídeo:} permite ver un vídeo para volver a continuar con la partida. Esta opción solo está disponible una vez por juego.
 	
-		\begin{figure}[H]
+		\begin{figure}%[H]
 		\centering
 		\includegraphics[height=0.7\textwidth]{manual/video.jpg}
 		\caption{Vídeo recompensa}\label{fig:video}
@@ -266,7 +266,7 @@ Es una clasificación de jugadores, dependiendo de la puntuación lograda en el 
 
 En el podio de los tres primeros jugadores aparecerá una insignia en forma de medalla, destacando el logro conseguido.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.8\textwidth]{manual/rankpage.jpg}
 	\caption{Ranking}\label{fig:rankpage}
@@ -281,7 +281,7 @@ Por lo que se encuentran dos botones que redirigen a:
 	\item Unirse a una partida creada, figura~\ref{fig:cuatrounir}.
 \end{itemize}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.7\textwidth]{manual/cuatromenu.jpg}
 	\caption{Menú del cuatro en raya}\label{fig:cuatromenu}
@@ -293,13 +293,13 @@ Cuando se entra en la pantalla, se genera una clave única, que es necesaria par
 Hay disponible un botón de volver, que lo que hace es destruir la clave para salir a la pantalla anterior, ver figura~\ref{fig:cuatromenu}. Es el mismo efecto que si se da a la pestaña de volver atrás.
 
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.7\textwidth]{manual/invite.jpg}
 	\caption{Invitar cuatro en raya}\label{fig:cuatroinvitar}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.6\textwidth]{manual/sharegame.jpg}
 	\caption{Compartir clave}\label{fig:sharegame}
@@ -309,7 +309,7 @@ Cuando se pulsa en el botón de compartir aparece un cuadro de diálogo, ver fig
 
 En el caso de que el contador del tiempo restante \emph{time left}, llegue a cero es porque se da por hecho que no se recibe respuesta por parte del invitado, saliendo el cuadro de diálogo, ver figura~\ref{fig:noplayerfound}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.6\textwidth]{manual/noplayerfound.jpg}
 	\caption{Sin jugador}\label{fig:noplayerfound}
@@ -322,13 +322,13 @@ Si se da la situación de que no es la clave correcta se avisará por pantalla, 
 
 En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla del juego, ver figura~\ref{fig:cuatrojuego}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/joingame.jpg}
 	\caption{Formulario para unirse a partida}\label{fig:cuatrounir}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.7\textwidth]{manual/uniralert.jpg}
 	\caption{Alerta de clave no válida}\label{fig:uniralert}
@@ -337,13 +337,13 @@ En el caso de que tengamos una clave válida, se redirigirá hacia la pantalla d
 \subsubsection{Juego}\label{cuatrojuego}
 Página con el contenido del juego, ver figura~\ref{fig:cuatrojuego}. Este consiste en formar líneas de longitud cuatro, en cualquiera de las direcciones posibles: diagonal, vertical y horizontal. Nada más entrar en esta pantalla, se produce el sorteo, para saber quién de los dos participantes comienza a jugar, ver figura~\ref{fig:sorteo}.
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[height=0.9\textwidth]{manual/cuatrojuego.jpg}
 	\caption{Cuatro en raya}\label{fig:cuatrojuego}
 \end{figure}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{manual/turno.jpg}
 	\caption{Sorteo del turno}\label{fig:sorteo}
@@ -358,7 +358,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 	
 	En la parte lateral derecha se encuentra el contador del tiempo transcurrido.
 	
-	 \begin{figure}[H]
+	 \begin{figure}%[H]
 	 	\centering
 	 	\includegraphics[width=0.8\textwidth]{manual/cabecera.jpg}
 	 	\caption{Zona superior}\label{fig:cabecera}
@@ -366,7 +366,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
  
 	\item En la parte central, ver figura~\ref{fig:tablero}, se dispone el tablero de siete filas por siete columnas. En el caso de que sea nuestro turno, se debe pinchar en la pantalla, donde sea posible colocar una ficha, es decir, que si debajo de la celda se encuentra vacío no será posible colocar la ficha y se deberá proceder a buscar otro sito en el que se pueda.
 	
-	\begin{figure}[H]
+	\begin{figure}%[H]
 		\centering
 		\includegraphics[width=0.8\textwidth]{manual/tablero.jpg}
 		\caption{Tablero}\label{fig:tablero}
@@ -376,7 +376,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 	
 	Si esta zona se encuentra con el color de fondo distinto de blanco indica que es el turno de este jugador.
 	
-	\begin{figure}[H]
+	\begin{figure}%[H]
 		\centering
 		\includegraphics[width=0.8\textwidth]{manual/inferior.jpg}
 		\caption{Zona personal}\label{fig:inferior}
@@ -386,7 +386,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 	
 	A la derecha de este campo, se encuentra el botón de enviar. Una vez se envía el mensaje, este se deshabilita, para no saturar la línea. Pasados 10 segundos volverá a estar operativo.
 	
-	\begin{figure}[H]
+	\begin{figure}%[H]
 		\centering
 		\includegraphics[width=0.8\textwidth]{manual/mensaje.jpg}
 		\caption{Envío de mensaje}\label{fig:mensaje}
@@ -395,7 +395,7 @@ La distribución de la pantalla~\ref{fig:cuatrojuego} es la siguiente, comenzand
 
 En el momento en que se da la situación de fin de juego, salta la alerta para mostrar quién de los dos jugadores es el ganador de la partida, como se puede ver en la imagen siguiente, ver figura~\ref{fig:finalcuatro}
 
-\begin{figure}[H]
+\begin{figure}%[H]
 	\centering
 	\includegraphics[width=0.8\textwidth]{manual/winer.jpg}
 	\caption{Final del cuatro en raya}\label{fig:finalcuatro}
