--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -1,17 +1,17 @@
 @misc{ wiki:scrm,
-    author = "{Wikipedia contributors}",
-    title = "Scrum (software development) --- {Wikipedia}{,} The Free Encyclopedia",
-    year = "2020",
-    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Scrum_(software_development)&oldid=943108748}",
-    note = "[Online; accessed 10-March-2020]"
-  }
+	author = "{Wikipedia contributors}",
+	title = "Scrum (software development) --- {Wikipedia}{,} The Free Encyclopedia",
+	year = "2020",
+	howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Scrum_(software_development)&oldid=943108748}",
+	note = "[Online; accessed 10-March-2020]"
+}
 
 @misc{ wiki:framework,
 	author = "Wikipedia",
 	title = "Framework",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Framework},
-	note = "[]"
+	note = ""
 }
 
 @misc{ foro:encuesta,
@@ -19,7 +19,7 @@
 	title = "Encuesta Forocoches",
 	year = "2020",
 	url = {https://www.forocoches.com/foro/showthread.php?t=7255092&highlight=flutter},
-	note = "[]"
+	note = ""
 }
 
 @misc{ wiki:ionnic,
@@ -27,15 +27,15 @@
 	title = "Ionic",
 	year = "2020",
 	url = {https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)},
-	note = "[]"
+	note = ""
 }
 
 @misc{ wiki:react,
-author = "Wikipedia",
-title = "React",
-year = "2020",
-url = {https://en.wikipedia.org/wiki/React_Native},
-note = "[]"
+	author = "Wikipedia",
+	title = "React",
+	year = "2020",
+	url = {https://en.wikipedia.org/wiki/React_Native},
+	note = ""
 }
 
 @misc{ wiki:xamarin,
@@ -43,7 +43,7 @@ note = "[]"
 	title = "Xamarin",
 	year = "2020",
 	url = {https://en.wikipedia.org/wiki/Xamarin},
-	note = "[]"
+	note = ""
 }
 
 @misc{ wiki:flutter,
@@ -51,7 +51,7 @@ note = "[]"
 	title = "Flutter",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Dart},
-	note = "[]"
+	note = ""
 }
 
 @misc{ wiki:firebase,
@@ -59,7 +59,7 @@ note = "[]"
 	title = "Firebase",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Firebase},
-	note = "[]"
+	note =""
 }
 
 @misc{ wiki:marketOS,
@@ -67,7 +67,7 @@ note = "[]"
 	title = "OS Market Share",
 	year = "2020",
 	url = {https://gs.statcounter.com/os-market-share/desktop-mobile/worldwide/#monthly-200901-202006},
-	note = "[]"
+	note = ""
 }
 
 @misc{ google:playservices,
@@ -75,7 +75,7 @@ note = "[]"
 	title = "Google play services",
 	year = "2020",
 	url = {https://play.google.com/store/apps/details?id=com.google.android.gms&hl=es_419},
-	note = "[]"
+	note = ""
 }
 
 @misc{ google:firebase,
@@ -83,7 +83,7 @@ note = "[]"
 	title = "Firebase Console Google",
 	year = "2020",
 	url = {https://firebase.google.com/docs/database?hl=es},
-	note = "[]"
+	note = ""
 }
 
 @misc{ google:material,
@@ -91,7 +91,7 @@ note = "[]"
 	title = "Google Material Design",
 	year = "2020",
 	url = {https://material.io/design},
-	note = "[]"
+	note = ""
 }
 
 @misc{ google:apiflutter,
@@ -99,7 +99,7 @@ note = "[]"
 	title = "API flutter",
 	year = "2020",
 	url = {https://api.flutter.dev/},
-	note = "[]"
+	note = ""
 }
 
 @misc{ google:pubdev,
@@ -107,7 +107,7 @@ note = "[]"
 	title = "Pub dev packages",
 	year = "2020",
 	url = {https://pub.dev/},
-	note = "[]"
+	note = ""
 }
 
 
