--- a/docs/latex/memoria.tex
+++ b/docs/latex/memoria.tex
@@ -389,7 +389,7 @@
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
 \noindent D. José Francisco Diez Pastor y D. Cesár García Osorio. profesores del departamento de Ingeniería IJnformática. área de Lenguajes y Sistemas Informáticos.
-\noindent Expone:
+\noindent Exponen:
 
 \noindent Que el alumno D. \nombre, con DNI 71301273p, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado \tfg. 
 
