--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -8,7 +8,7 @@ Quiero comentar brevemente que la idea inicial para el proyecto no era la de cre
 	\item La siguiente propuesta de mis tutores fue la de trabajar con la herramienta \emph{Knime} junto con \emph{Moodle}. Dedique muchas horas a este proyecto, pero era de investigación y no me motivaba, por lo que se acabó descartando esta opción.
 \end{itemize}
 
-Finalmente, para no perder la convocatoria me decanté por hacer una aplicación Android mediante Flutter~\cite{wiki:flutter}. El porque de esta decisión es que la cuota de mercado para este sistema operativo es enorme~\cite{wiki:marketOS}, con un fuerte crecimiento hasta 2018 cuando se estabilizó. Actualmente es el líder del mercado como podemos ver en la siguiente imagen~\ref{fig:cuota}. 
+Finalmente, para no perder la convocatoria me decanté por hacer una aplicación Android mediante Flutter~\cite{wiki:flutter}. El porqué de esta decisión es que la cuota de mercado para este sistema operativo es enorme~\cite{wiki:marketOS}, con un fuerte crecimiento hasta 2018 cuando se estabilizó. Actualmente es el líder del mercado como podemos ver en la siguiente figura~\ref{fig:cuota}. 
 
 También se debe remarcar que la cuota de mercado de los sistemas operativos tradicionales no para de descender, lo que implica que los móviles han venido para quedarse, pero no para sustituir a los ordenadores. Por lo que es una apuesta de futuro aprender el desarrollo de estas aplicaciones móviles, ya que la demanda es muy grande.
 
