--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -38,7 +38,7 @@ Un framework (término de origen anglosajón: marco de trabajo)~\cite{wiki:frame
 Por lo tanto, es necesario trabajar mediante frameworks, ya que nos garantiza una aplicación de mayor calidad que si la hacemos en código nativo.
 
 \subsection{Opciones disponibles}
-En el mercado existen muchos frameworks disponibles para el desarrollo de aplicaciones móviles, por lo que decantarse por uno no es tarea sencilla, ya que cada uno tiene sus pros y contras. En una encuesta realizada a mediados del 2019 en el siguiente foro: Forocohes~\cite{foro:encuesta}, uno de los más recomendados era Flutter, como se puede ver en la imagen~\ref{fig:encuesta}:
+En el mercado existen muchos frameworks disponibles para el desarrollo de aplicaciones móviles, por lo que decantarse por uno no es tarea sencilla, ya que cada uno tiene sus pros y contras. En una encuesta realizada a mediados del 2019 en el siguiente foro: Forocohes~\cite{foro:encuesta}, uno de los más recomendados era Flutter, como se puede ver en la figura~\ref{fig:encuesta}:
 
 \begin{figure}[h]
 	\centering
@@ -130,7 +130,7 @@ Las desventajas que tiene son:
 \end{itemize}
 
 Al final me decanté por este Framework básicamente porque es algo nuevo y disruptivo. El respaldo de Google se me presentaba como garantía, con la tranquilidad que eso conlleva. Es decir, todo el \emph{cloud services de Google} se puede integrar con gran facilidad.
-Otra de las cosas que me incentivaron a elegirlo es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta~\ref{fig:encuesta} anterior, se encuentra entre los favoritos de los desarrolladores.
+Otra de las cosas que me incentivaron a elegirlo es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta, ver figura~\ref{fig:encuesta}, se encuentra entre los favoritos de los desarrolladores.
 
 \subsection{Firebase}
 Firebase~\cite{wiki:firebase} es una plataforma para el desarrollo de aplicaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
@@ -144,7 +144,7 @@ Entre los servicios que ofrece destacan entre otros:
 \begin{itemize}
 	\item \textbf{Real Time Data Base:} base de datos simples en tiempo real, si fuera necesario tener que guardar música, vídeo o fotos, tiene otra parte dedicada a ficheros llamada \emph{Storage}.
 	\item \textbf{Crash reporting:} herramienta para el reporte de errores que se producen en la aplicación.
-	\item \textbf{Autentication:} integración con la mayor cantidad de aplicaciones de redes sociales en las que su API permite la identificación de usuarios. Obviamente el propio Google es una de ellas. Lo podemos ver en la siguiente imagen~\ref{fig:inicio}:
+	\item \textbf{Autentication:} integración con la mayor cantidad de aplicaciones de redes sociales en las que su API permite la identificación de usuarios. Obviamente el propio Google es una de ellas. Lo podemos ver en la siguiente figura~\ref{fig:inicio}:
 	\begin{figure}[H]
 		\centering
 		\includegraphics[width=1\textwidth]{teoria/inicio.png}
