--- a/docs/latex/tex/4_Tecnicas_y_herramientas.tex
+++ b/docs/latex/tex/4_Tecnicas_y_herramientas.tex
@@ -57,7 +57,7 @@ Hay una gran cantidad de herramientas para el control de versiones en la tienda 
 \subsection{Opción elegida}
 
 \subsubsection{Zenhub}\label{zenhub}
-~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github, pág.~\pageref{github}, lo que me llevó a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban}, ver figura~\ref{fig:zenhub}, donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor encajaba en la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión se lleva. No me gustó que las tareas las cierre por días en vez de por horas.
+~\href{https://bitbucket.org/product//}{Zenhub} es una herramienta de gestión de proyectos, que viene por defecto integrada en Github, pág.~\pageref{github}, lo que me llevó a usarla sin pensarlo mucho. En mi caso lo que más usé fue el tablero de \emph{kanban}, ver figura~\ref{fig:zenhub}, donde poder ver las \emph{issues} que me planificaba para cada \emph{sprint}. Ofrece diferentes tipos de gráficos, el que mejor encajaba en la planificación fue de \emph{burndown}, ya que me permite ver lo ideal del proyecto y la progresión que se lleva. No me gustó que las tareas las cierre por días en vez de por horas.
 
 \begin{figure}%[h]
 	\centering
